<resources>
    <string name="app_name">Sprak Implementation</string>
    <string name="sprak">Sprak</string>
    <string name="loading">loading</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="login">LOGIN</string>
    <string name="registrate">REGISTRATE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="registerThanks">Gracias por registrarte en Sprak</string>
    <string name="continuar">Continuar</string>
    <string name="chooseALanguage">Escoge un Lenguage</string>
    <string name="noruego">Noruego</string>
    <string name="catalan">Catalan</string>
    <string name="ingles">Ingles</string>
    <string name="sueco">Sueco</string>
    <string name="aleman">Aleman</string>
    <string name="italiano">Italiano</string>
    <string name="frances">Frances</string>
    <string name="portugues">Portugues</string>
    <string name="danes">Danés</string>
    <string name="stars">stars</string>
    <string name="test">Test</string>
    <string name="social">Social</string>
    <string name="ranking">Ranking</string>
    <string name="versus">Versus</string>
    <string name="aprender">Aprender</string>
    <string name="work_in_progress">Work in Progress…</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="drawtext">Hola</string>
    <string name="profilepicture">Profile Picture</string>
    <string name="daniel_romero">Daniel Romero</string>
    <string name="learning_gmail_com">learning@elpuig.xeill.net</string>
    <string name="_0">0</string>
    <string name="traduce_esta_frase">Traduce esta Frase</string>
    <string name="testquestion">Hello, my name is Paco. I am 22 years old and i have 2 cousins.</string>
    <string name="hola">Hola…</string>
    <string name="siguiente">Siguiente</string>
    <string name="selecciona_la_traduccion_correcta">Selecciona la traduccion correcta</string>
    <string name="vaca">Vaca</string>
    <string name="pato">Pato</string>
    <string name="pollo">Pollo</string>
    <string name="ganso">Ganso</string>
    <string name="cabra">Cabra</string>
    <string name="toro">Toro</string>
    <string name="resultados">Has respondido correctamente 50% de las preguntas.</string>
    <string name="test_completado">Test Completado</string>
    <string name="bronze">bronze</string>
    <string name="bronze_league">Bronze League</string>
    <string name="compite">Compite contra otros jugadores cada semana para ver quien es el que ha aprendido mas!</string>
    <string name="first">1.</string>
    <string name="primero">Primero</string>
    <string name="_30">30</string>
    <string name="segundo">Segundo</string>
    <string name="tercero">Tercero</string>
    <string name="cambiar_avatar">Cambiar Avatar</string>
    <string name="nombre">Nombre</string>
    <string name="sign_out">Sign Out</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="_4">4.</string>
    <string name="_5">5.</string>
    <string name="_6">6.</string>
    <string name="_7">7.</string>
    <string name="paco">Paco</string>
    <string name="_1">1</string>
    <string name="__4">- 4</string>
    <string name="guion">-</string>
    <string name="profile">Profile</string>
    <string name="_10">10</string>
    <string name="aprender_es_mas_divertido_con_amigos_n_conecta_con_otros">Aprender es mas divertido con amigos. \n Conecta con otros.</string>
    <string name="insert">insert</string>

</resources>