<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="#009688"
    android:gravity="bottom"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/profilepicture"
        android:layout_marginStart="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/daniel_romero"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learning_gmail_com"
        android:textColor="?attr/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"/>
</LinearLayout>
