<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <kr.co.prnd.StepProgressBar
                android:id="@+id/stepProgressBar"
                android:layout_width="0dp"
                android:layout_height="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:max="5"
                app:step="2"
                app:stepDoneColor="#0ACF83"
                app:stepMargin="8dp"
                app:stepUndoneColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView2"
                style="@style/tests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/raleway_extrabold"
                android:text="@string/selecciona_la_traduccion_correcta"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stepProgressBar" />

            <Button
                android:id="@+id/buttonVaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/vaca"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/buttonGanso"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/buttonToro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/toro"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/buttonPollo"
                app:layout_constraintEnd_toStartOf="@id/buttonCabra"
                app:layout_constraintStart_toEndOf="@+id/buttonVaca"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/buttonCabra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/cabra"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/buttonPato"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/buttonGanso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/ganso"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/siguiente"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/buttonPollo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/pollo"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/siguiente"
                app:layout_constraintEnd_toStartOf="@id/buttonPato"
                app:layout_constraintStart_toEndOf="@+id/buttonGanso"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/buttonPato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/pato"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/siguiente"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


            <Button
                android:id="@+id/siguiente"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:backgroundTint="#4CAF50"
                android:text="@string/siguiente"
                app:cornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>