<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <TextView
        android:id="@+id/sprakLogo"
        style="@style/Sprak"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/raleway_extrabold"
        android:text="@string/sprak"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/usernameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="25dp"
        android:width="350dp"
        android:autofillHints=""
        android:background="@drawable/edittextborder"
        android:fontFamily="@font/raleway_extrabold"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/passwordInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sprakLogo" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:width="350dp"
        android:autofillHints=""
        android:background="@drawable/edittextborder"
        android:fontFamily="@font/raleway_extrabold"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:width="240dp"
        android:backgroundTint="@color/white"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="170dp"
        android:width="240dp"
        android:backgroundTint="@color/white"
        android:text="@string/registrate"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>