<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <TextView
        android:id="@+id/sprakLogo"
        style="@style/Sprak"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/raleway_extrabold"
        android:text="@string/sprak"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/usernameInput2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <EditText
        android:id="@+id/usernameInput2"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:width="350dp"
        android:autofillHints=""
        android:background="@drawable/edittextborder"
        android:fontFamily="@font/raleway_extrabold"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/greyLogin"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/emailInput2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sprakLogo" />

    <EditText
        android:id="@+id/emailInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:width="350dp"
        android:autofillHints=""
        android:background="@drawable/edittextborder"
        android:fontFamily="@font/raleway_extrabold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/greyLogin"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/passwordInput2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput2" />

    <EditText
        android:id="@+id/passwordInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:width="350dp"
        android:autofillHints=""
        android:background="@drawable/edittextborder"
        android:fontFamily="@font/raleway_extrabold"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/greyLogin"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput2" />



    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="140dp"
        android:width="240dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/registrate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput2" />

</androidx.constraintlayout.widget.ConstraintLayout>