<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseALanguage"
    android:background="@color/grey"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/chooseALanguage"
        android:textAlignment="center"
        android:fontFamily="@font/raleway_extrabold"
        android:textColor="@color/white"
        android:layout_weight="2"
        android:gravity="center"
        android:textSize="42sp"/>

    <LinearLayout
        android:id="@+id/noruegoSeleccion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageNoruega"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/norskflag"
            android:layout_weight="1"
            android:padding="12dp"
            android:contentDescription="@string/noruego" />

        <TextView
            android:id="@+id/textNoruega"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/noruego"
            android:textColor="@color/white"
            android:fontFamily="@font/raleway_extrabold"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/catalanSeleccion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageCatalan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/catalanflag"
            android:layout_weight="1"
            android:padding="12dp"
            android:contentDescription="@string/noruego" />

        <TextView
            android:id="@+id/textCatalan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/catalan"
            android:textColor="@color/white"
            android:fontFamily="@font/raleway_extrabold"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inglesSeleccion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageIngles"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ukflag"
            android:layout_weight="1"
            android:padding="12dp"
            android:contentDescription="@string/noruego" />

        <TextView
            android:id="@+id/textIngles"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ingles"
            android:textColor="@color/white"
            android:fontFamily="@font/raleway_extrabold"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/suecoSeleccion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageSueco"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/sweflag"
            android:padding="12dp"
            android:layout_weight="1"
            android:contentDescription="@string/noruego" />

        <TextView
            android:id="@+id/textSueco"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/sueco"
            android:textColor="@color/white"
            android:fontFamily="@font/raleway_extrabold"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/alemanSeleccion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageAleman"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/germanflag"
            android:layout_weight="1"
            android:padding="12dp"
            android:contentDescription="@string/noruego" />

        <TextView
            android:id="@+id/textAleman"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/aleman"
            android:textColor="@color/white"
            android:fontFamily="@font/raleway_extrabold"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/italianoSeleccion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageItaliano"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/italianflag"
            android:layout_weight="1"
            android:padding="12dp"
            android:contentDescription="@string/noruego" />

        <TextView
            android:id="@+id/textItaliano"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/italiano"
            android:textColor="@color/white"
            android:fontFamily="@font/raleway_extrabold"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/francesSeleccion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageFrances"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/frenchflag"
            android:layout_weight="1"
            android:padding="12dp"
            android:contentDescription="@string/noruego" />

        <TextView
            android:id="@+id/textFrances"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/frances"
            android:textColor="@color/white"
            android:fontFamily="@font/raleway_extrabold"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/portuguesSeleccion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagePortugues"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/portflag"
            android:layout_weight="1"
            android:padding="12dp"
            android:contentDescription="@string/noruego" />

        <TextView
            android:id="@+id/textPortugues"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/portugues"
            android:textColor="@color/white"
            android:fontFamily="@font/raleway_extrabold"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/danesSeleccion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageDanes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/danishflag"
            android:padding="12dp"
            android:layout_weight="1"
            android:contentDescription="@string/noruego" />

        <TextView
            android:id="@+id/textDanes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/danes"
            android:textColor="@color/white"
            android:fontFamily="@font/raleway_extrabold"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_weight="2"/>
    </LinearLayout>


</LinearLayout>